[package]
name = "lbsaver"
version = "0.1.0"
authors = ["aarush"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "^0.2", features = ["full"]}
hyper = "^0.14.1"
beatsaver-rs = "^0.1.2"
serde = "^1.0"
zip = "^0.5.9"
confy = "^0.4.0"